# cmake_test

./: .gitignore  CMakeLists.txt  README.md  make_with_cmake.sh  worse_cmake.sh
common/: CMakeLists.txt  common.hh  common.hh.in
sub1/: CMakeLists.txt
sub2/: CMakeLists.txt
sub2/src/: sub2.cc
